# glide

./: README.md  pyproject.toml  requirements.txt
examples/antarctica/: antarctica_forward.py  antarctica_inverse.py  build_dataset.py
examples/bitterroot/: bitterroot.py
examples/greenland/: analyze_volume.py  gr585_loop.py  gr_spinup.py  gr_spinup_static.py  greenland_forward.py  greenland_inverse.py  spinup_volume.py
examples/greenland/ISMIP_downloader/: .gitignore  Instructions.txt  config.yaml  gr_downloader.py
examples/ismip-hom/: ismip-hom-inverse.py  ismip-hom.py
examples/wrangell/: wrangell_inverse.py
examples/wrangell/preprocessing/: make_bedradar.py  make_dem.py  make_insolation.py  make_merged.py  make_pancarra_vars.py  make_velocity.py
glide/: __init__.py  data.py  field.py  grid.py  hooks.py  io.py  kernels.py  model.py  multigrid.py  operators.py  physics.py  solver.py  torch.py
glide/cuda/: common.cu  flux.cu  grad.cu  residuals.cu  stress.cu  transfer.cu  vanka.cu  viscosity.cu
tests/: adjoint_test.py  grad_test.py  jvp_test.py
