[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glide"
version = "0.1.0"
description = "GPU-accelerated Lightweight Ice Dynamics Engine"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "xarray>=2022.0.0",
    "h5py>=3.0.0",
    "h5netcdf>=1.0.0",
    "zarr>=2.10.0",
    "pyproj>=3.0.0",
    "geopandas>=0.10.0",
    "gdown>=4.0.0",
]

[project.optional-dependencies]
# CuPy ships a separate binary wheel per CUDA major version, with no universal
# wheel. Install the extra matching your CUDA toolkit, e.g. `pip install glide[cuda12]`.
cuda11 = ["cupy-cuda11x>=12.0.0"]
cuda12 = ["cupy-cuda12x>=12.0.0"]
cuda13 = ["cupy-cuda13x>=13.0.0"]
torch = [
    "torch>=2.0.0",
]
examples = [
    "matplotlib>=3.5.0",
    "polars>=0.18.0",
    "rioxarray>=0.13.0",
    "shapely>=2.0.0",
    "torch>=2.0.0",
]

[project.urls]
Repository = "https://github.com/glide-ism/glide"

[tool.setuptools.packages.find]
include = ["glide*"]

[tool.setuptools.package-data]
glide = ["cuda/*.cu"]
